# asym_ensembles

./: .gitignore  README.md  main.py  pyproject.toml
data/processed/: agg0.csv  agg1.csv  agg3.csv  alphas_gumbel_1024_div_num_exp.csv  alphas_gumbel_64fix.csv  mod0.csv  mod1.csv  mod3.csv  moe_fix_total_hidden_size.csv  moe_num_experts.csv  table3_gumbel_1024_div_num_exp.csv  table3_gumbel_64fix.csv  table3_gumbel_standart_64fix.csv  table3_standart_1024_div_num_exp.csv  table3_standart_64fix.csv
data/raw/: otto.csv
notebooks/: check_wmlp.ipynb  experiment.ipynb  process_result.ipynb
reports_old/figures/: ensemble_improvement_table.csv
reports_old/figures/moe_num_experts/: improvement_table.csv
src/asym_ensembles/: data_loaders.py
src/asym_ensembles/modeling/: gumbel.py  models.py  moe.py  moie.py  training.py
