[tool.poetry]
name = "asym-ensembles"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.5.1"
pandas = "^2.2.3"
scikit-learn = "^1.6.1"
wandb = "^0.19.3"
matplotlip = "^0.2"
plotly = "^5.24.1"
tqdm = "^4.67.1"
joblib = "^1.4.2"
seaborn = "^0.13.2"
matplotlib = "^3.10.0"
numpy = "<2.0.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
